correction des bugs

--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,10 @@
       "browser": true,
       "es6": true
     },
+    "rules": {
+      "indent": ["warn", 2, { "SwitchCase": 1 }],
+      "multiline-ternary": ["warn", "always-multiline"]
+    },
     "extends": [
       "eslint:recommended"
     ]
